menambahkan css+modif index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>latihan GIT</title>
     </head>
     <body>
-        <h1>latihan GIT camp 404</h1>
+        <h1>Program GIT camp 404</h1>
+        <p>tingkatkan skill versioningmu di mana hayyoo...</p>
     </body>
 </html>
