mengubah index.html dari komputer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Program GIT camp 404</h1>
-        <p>tingkatkan skill versioningmu di mana hayyoo...</p>
+        <p>klik daftar untuk meningatkan skill</p>
+        <button>daftar</button>
     </body>
 </html>
