mengubah index.html dari github

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Program GIT camp 404</h1>
-        <p>tingkatkan skill versioningmu di mana hayyoo...</p>
+        <p>daftarkan disini</p>
+        <input type="button">daftar</input>
     </body>
 </html>
