menyelesaikan konflik index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Program GIT camp 404</h1>
-        <p>klik daftar untuk meningatkan skill</p>
+        <p>klik daftar untuk meningkatkan skill</p>
         <button>daftar</button>
     </body>
 </html>
